fix: Theme error on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
 
 
 .bg-overlay {
-  @apply absolute inset-0 z-0 bg-gradient-to-b !from-[#f1f1f1] !to-[#171717] dark:!from-background/80 dark:!to-background/90;
+  @apply absolute inset-0 z-0 bg-gradient-to-b !from-foreground/97 !to-foreground/97 dark:!from-background/97 dark:!to-background/97;
 }
 
 
